[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Salmeron Océane"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9.6"
numpy = ">=1.19.2,<1.20.0"
keras = "^2.6.0"
tensorflow = "2.5.0"
pandas = "^1.3.2"
pylint = "^2.9.6"
matplotlib = "^3.4.3"
opencv-python = "^4.0.3"
sklearn = "^0.0"
streamlit = "^0.86.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
